--- a/css/style.css
+++ b/css/style.css
@@ -905,7 +905,7 @@ h6 {
 --------------------------------------------------------------*/
 
 @media (min-width: 991px) {
-  #call-to-action .cta-btn-container {
+  #publications .cta-btn-container {
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
