--- a/css/style.css
+++ b/css/style.css
@@ -618,9 +618,6 @@ h6 {
 /* Field sites section 
 --------------------------------*/
 
-/* About Us Section
---------------------------------*/
-
 #studyAreas {
   padding: 80px 0;
 }
@@ -793,6 +790,45 @@ h6 {
   font-size: 18px;
   margin: 0 2px;
 }
+
+
+/* Project partners Section
+--------------------------------*/
+
+#projectPartners {
+  padding: 60px 0;
+}
+
+#projectPartners img {
+  max-width: 80%;
+  opacity: 0.5;
+  transition: 0.3s;
+  padding: 15px 0;
+}
+
+#projectPartners img:hover {
+  opacity: 1;
+}
+
+#projectPartners .owl-nav,
+#projectPartners .owl-dots {
+  margin-top: 5px;
+  text-align: center;
+}
+
+#projectPartners .owl-dot {
+  display: inline-block;
+  margin: 0 5px;
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  background-color: #ddd;
+}
+
+#projectPartners .owl-dot.active {
+  background-color: #1bb1dc;
+}
+
 
 /*--------------------------------------------------------------
 # Footer
