change msca logo size

--- a/css/style.css
+++ b/css/style.css
@@ -576,6 +576,11 @@ h6 {
   transition: .5s;
 }
 
+#about .msca-logo {
+    width: 50%;
+    height: auto;
+}
+
 /* Publications sections
 --------------------------------*/
 
